[gd_scene load_steps=2 format=3 uid="uid://bsh3n8ghxa5jk"]

[ext_resource type="Script" path="res://scenes/Main.gd" id="1_6ywpk"]

[node name="Main" type="Node2D"]
script = ExtResource("1_6ywpk")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="AddCharacterA" type="Button" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Character A"

[node name="AddCharacterB" type="Button" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Character B"

[node name="DeleteCharacter" type="Button" parent="UI/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete Random Character"

[node name="Characters" type="Node2D" parent="."]
